# raylib-daslang

./: .clang-format  .clang-uml  .das_module  .das_package  .gitignore  .nvim.lua  CMakeLists.txt  configs.lua  manage.sh  premake5.lua
rl_das/: premake5.lua
rl_das/src/: module_raylib.cpp  module_raylib.h  rl_das.h
rl_das/src/scripts/: raylib.das  raylib.das.inc  raylib_c.das.inc  raylib_helpers.das  raylib_helpers.das.inc
rl_das/tools/: gen_raylib_adapter.das  gen_raylib_bindings.py
rl_das_tests/: premake5.lua
rl_das_tests/scripts/: README.md  das_test.das  sandbox.das  test_all.das  test_components.das  test_drawing.das  test_input.das  test_queries.das  test_window.das  test_world.das
rl_das_tests/src/: main.cpp
